fixed scrollbar

--- a/src/components/Card/CardParagraph.scss
+++ b/src/components/Card/CardParagraph.scss
@@ -3,8 +3,10 @@
   font-family: 'Roboto', sans-serif;
   text-indent: 24px;
   color: $color-text-display;
-  height: 320px;
+
   .scrollbar-content{
     padding: 16px 24px !important;
+  }
+  .rail {
   }
 }
